--- a/components/PortfolioItem.module.scss
+++ b/components/PortfolioItem.module.scss
@@ -29,24 +29,27 @@
     background-image: none;
   }
 
-  & a:hover {
+  @media (hover: hover) and (pointer: fine) {
 
-    @include effect-rainbow-hover;
+    & a:hover {
 
-    .projectTitleText {
-      @include solid-underline-hover;
-    }
+      @include effect-rainbow-hover;
 
-    .arrowIcon {
-      transition: all 0.35s ease;
+      .projectTitleText {
+        @include solid-underline-hover;
+      }
 
-      animation-duration: 0.35s;
-      animation-name: bounce-small;
-      animation-iteration-count: infinite;
-      animation-direction: alternate;
+      .arrowIcon {
+        transition: all 0.35s ease;
 
-      @media (min-width: $media-min-small) {
-        animation-name: bounce;
+        animation-duration: 0.35s;
+        animation-name: bounce-small;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+
+        @media (min-width: $media-min-small) {
+          animation-name: bounce;
+        }
       }
     }
   }
@@ -56,14 +59,18 @@
 
   @include solid-underline-white;
 
-  &:hover {
-    @include solid-underline-hover;
-    color: var(--color-link-hover);
+  @media (hover: hover) and (pointer: fine) {
 
-    svg {
-      fill: var(--color-link-hover);
+    &:hover {
+      @include solid-underline-hover;
+      color: var(--color-link-hover);
+
+      svg {
+        fill: var(--color-link-hover);
+      }
     }
   }
+
 }
 
 .arrowIcon {
